<resources>
    <string name="app_name">Favourite Player Tracker</string>
    <string name="tab_name_1">Players</string>
    <string name="tab_name_2">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="name_prompt">Name:</string>
    <string name="new_player_ET_hint">Enter player\'s name.</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="player_picture">player picture</string>
    <string name="playerProfileImageContentDescription">picture of selected player</string>
    <string name="team_label">Team:</string>
    <string name="position_label">Position:</string>
    <string name="physicals_label">Physicals:</string>
    <string name="bottom_nav_stats">Stats</string>
    <string name="bottom_nav_news">News</string>
    <string name="bottom_nav_tweets">Tweets</string>
    <string name="news_item_image_content_description">news item image</string>
</resources>