<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.playerChosen.PlayerChosenFragment">


    <ImageView
        android:id="@+id/playerProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_100"
        android:contentDescription="@string/playerProfileImageContentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />


    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="First Last"
        android:textSize="30sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/playerProfileImage"
        />

    <TextView
        android:id="@+id/playerPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/nameTV"
        app:layout_constraintTop_toBottomOf="@id/nameTV" />

    <TextView
        android:id="@+id/playerTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_label"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/playerPosition"
        app:layout_constraintTop_toBottomOf="@id/nameTV"/>

    <TextView
        android:id="@+id/playerPhysicals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physicals_label"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/playerPosition"
        app:layout_constraintStart_toStartOf="@id/nameTV" />



    <FrameLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>